--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: "Montserrat", sans-serif;
 }
-.header{
-    min-height:100vh;
+
+.header {
+    min-height: 100vh;
     width: 100%;
     background-image: linear-gradient(rgba(4,9,30, 0.7), rgba(4,9,30, 0.7)), url(images/banner.png);
     background-position: center;
@@ -12,34 +13,40 @@
     position: relative;
 }
 
-nav{
+nav {
     display: flex;
     padding: 2% 6%;
     justify-content: space-between;
     align-items: center;
 }
-nav img{
+
+nav img {
     width: 150px;
 }
-.nav-links{
+
+.nav-links {
     flex: 1;
     text-align: right;
 }
-.nav-links ul{
+
+.nav-links ul {
     list-style: none;
 }
-.nav-links ul li{
+
+.nav-links ul li {
     display: inline-block;
     padding: 8px 12px;
     position: relative;
 }
-.nav-links ul li a{
+
+.nav-links ul li a {
     color: #fff;
     text-decoration: none;
     font-size: 13px;
 }
-.nav-links ul li::after{
-    content:'';
+
+.nav-links ul li::after {
+    content: '';
     width: 0%;
     height: 2px;
     background: #fff;
@@ -47,29 +54,34 @@ nav img{
     margin: auto;
     transition: 0.5s;
 }
-.nav-links ul li:hover::after{
+
+.nav-links ul li:hover::after {
     width: 100%;
 }
-.text-box{
+
+.text-box {
     width: 90%;
     color: #fff;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     text-align: center;
 }
-.text-box h1{
+
+.text-box h1 {
     font-size: 62px;
 }
-.text-box p{
+
+.text-box p {
     margin: 10px 0 40px;
     color: #fff;
     font-size: 14px;
 }
-.hero-btn{
+
+.hero-btn {
     display: inline-block;
-    text-decoration:  none;
+    text-decoration: none;
     color: #fff;
     border: 1px solid #fff;
     padding: 12px 34px;
@@ -77,26 +89,28 @@ nav img{
     background: transparent;
     position: relative;
     cursor: pointer;
-    
 }
-.hero-btn:hover{
+
+.hero-btn:hover {
     border: 1px solid #f44336;
     background: #f44336;
     transition: 1s;
 }
 
-nav .fa{
+nav .fa {
     display: none;
 }
 
-@media(max-width: 700px){
-    .text-box h1{
-        font-size:20px;
+@media (max-width: 700px) {
+    .text-box h1 {
+        font-size: 20px;
     }
-    .nav-links ul li{
+
+    .nav-links ul li {
         display: block;
     }
-    .nav-links{
+
+    .nav-links {
         position: absolute;
         background: #f44336;
         height: 100vh;
@@ -106,49 +120,57 @@ nav .fa{
         text-align: left;
         z-index: 2;
         transition: 0.5s;
-        
     }
-    nav .fa{
+
+    nav .fa {
         display: block;
         color: #fff;
         margin: 10px;
-        font-size:22px;
+        font-size: 22px;
         cursor: pointer;
     }
-    .nav-links ul{
+
+    .nav-links ul {
         padding: 30px;
     }
-}
-/*---------- course -----------*/
 
-.course{
+    .layer {
+        background: rgba(226,0,0,0.7) !important;
+    }
+
+    .layer h3 {
+        bottom: 49% !important;
+        opacity: 1 !important;
+    }
+}
+
+.course {
     width: 80%;
     margin: auto;
     text-align: center;
     padding-top: 100px;
 }
 
-h1{
+h1 {
     font-size: 36px;
     font-weight: 600;
-    
 }
 
-p{
-    color:#777;
+p {
+    color: #777;
     font-size: 14px;
     font-weight: 300;
     line-height: 22px;
     padding: 10px;
 }
 
-.row{
+.row {
     margin-top: 5%;
     display: flex;
     justify-content: space-between;
 }
 
-.course-col{
+.course-col {
     flex-basis: 31%;
     background: #fff3f3;
     border-radius: 10px;
@@ -158,23 +180,21 @@ p{
     transition: 0.5s;
 }
 
-h3{
+h3 {
     text-align: center;
     font-weight: 600;
     margin: 10px 0;
 }
 
-.course-col:hover{
+.course-col:hover {
     box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
 }
 
-@media(max-width: 700px){
-    .row{
+@media (max-width: 700px) {
+    .row {
         flex-direction: column
     }
 }
-
-/*--------- campus ---------*/
 
 .campus {
     width: 80%;
@@ -183,7 +203,7 @@ h3{
     padding-top: 50px;
 }
 
-.campus-col{
+.campus-col {
     flex-basis: 32%;
     border-radius: 10px;
     margin-bottom: 30px;
@@ -191,12 +211,12 @@ h3{
     overflow: hidden;
 }
 
-.campus-col img{
+.campus-col img {
     width: 100%;
     display: block;
 }
 
-.layer{
+.layer {
     background: transparent;
     height: 100%;
     width: 100%;
@@ -206,11 +226,11 @@ h3{
     transition: 0.5s;
 }
 
-.layer:hover{
+.layer:hover {
     background: rgba(226,0,0,0.7);
 }
 
-.layer h3{
+.layer h3 {
     width: 100%;
     font-weight: 500;
     color: #fff;
@@ -223,36 +243,34 @@ h3{
     transition: 0.5s;
 }
 
-.layer:hover h3{
+.layer:hover h3 {
     bottom: 49%;
     opacity: 1;
 }
 
-/*--------- location ---------*/
-
-.location{
+.location {
     width: 80%;
     margin: auto;
     text-align: center;
     padding-top: 50px;
 }
 
-.location img{
+.location img {
     width: 100%;
     display: block;
 }
 
-.location p{
+.location p {
     font-size: 22px;
 }
-/*--------- contact ---------*/
-.contact{
+
+.contact {
     width: 80%;
     margin: auto;
     text-align: center;
-    padding-top: 50px; 
+    padding-top: 50px;
 }
 
-.contact p{
+.contact p {
     font-size: 22px;
 }
