--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ nav .fa {
     }
 
     .layer {
-        background: rgba(226,0,0,0.7) !important;
+        background: transparent !important;
     }
 
     .layer h3 {
@@ -192,7 +192,7 @@ h3 {
 
 @media (max-width: 700px) {
     .row {
-        flex-direction: column
+        flex-direction: column;
     }
 }
 
