--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     font-family: "Montserrat", sans-serif;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 .header {
     min-height: 100vh;
     width: 100%;
