--- a/style.css
+++ b/style.css
@@ -31,23 +31,14 @@ nav img {
 .nav-links {
     flex: 1;
     text-align: right;
-    position: fixed;
-    top: 0;
-    right: -200px; /* Start off-screen */
-    height: 100vh;
-    width: 200px;
-    background: #f44336;
-    z-index: 2;
-    transition: right 0.5s ease;
 }
 
 .nav-links ul {
     list-style: none;
-    padding: 30px;
 }
 
 .nav-links ul li {
-    display: block;
+    display: inline-block;
     padding: 8px 12px;
     position: relative;
 }
@@ -119,12 +110,32 @@ nav .fa {
         font-size: 20px;
     }
 
+    .nav-links ul li {
+        display: block;
+    }
+
+    .nav-links {
+        position: absolute;
+        background: #f44336;
+        height: 100vh;
+        width: 200px;
+        top: 0;
+        right: -200px;
+        text-align: left;
+        z-index: 2;
+        transition: 0.5s;
+    }
+
     nav .fa {
         display: block;
         color: #fff;
         margin: 10px;
         font-size: 22px;
         cursor: pointer;
+    }
+
+    .nav-links ul {
+        padding: 30px;
     }
 
     .layer {
