--- a/style.css
+++ b/style.css
@@ -31,27 +31,36 @@ nav img {
 .nav-links {
     flex: 1;
     text-align: right;
+    position: absolute;
+    top: 0;
+    right: -200px;
+    width: 200px;
+    height: 100vh;
+    background: #f44336;
+    z-index: 2;
+    transition: 0.5s;
 }
 
 .nav-links ul {
     list-style: none;
+    padding: 30px;
+    text-align: left;
 }
 
 .nav-links ul li {
-    display: inline-block;
-    padding: 8px 12px;
-    position: relative;
+    display: block;
 }
 
 .nav-links ul li a {
     color: #fff;
     text-decoration: none;
     font-size: 13px;
+    padding: 8px 12px;
 }
 
 .nav-links ul li::after {
     content: '';
-    width: 0%;
+    width: 0;
     height: 2px;
     background: #fff;
     display: block;
@@ -110,20 +119,8 @@ nav .fa {
         font-size: 20px;
     }
 
-    .nav-links ul li {
-        display: block;
-    }
-
     .nav-links {
-        position: absolute;
-        background: #f44336;
-        height: 100vh;
-        width: 200px;
-        top: 0;
         right: -200px;
-        text-align: left;
-        z-index: 2;
-        transition: 0.5s;
     }
 
     nav .fa {
@@ -132,10 +129,6 @@ nav .fa {
         margin: 10px;
         font-size: 22px;
         cursor: pointer;
-    }
-
-    .nav-links ul {
-        padding: 30px;
     }
 
     .layer {
